--- a/docs/src/content/docs/features/sorting.mdx
+++ b/docs/src/content/docs/features/sorting.mdx
@@ -3,18 +3,16 @@ title: sorting files
 description: how to sort files and folders in rovr.
 ---
 
-{/* <add image> */}
+![sort options](/rovr/screenshots/sort-order.svg)
 
 rovr provides multiple ways to sort files and folders in the file list, allowing you to organize your view based on different criteria.
 
 ## accessing the sort menu
 
-{/* <add image> */}
-
 You can access the sort menu by:
 - clicking the sort button in the action button menu
-- the sort button displays the current sort order icon and direction
-- use the sort order switcher to quickly cycle through different sort orders
+![sort order button](/rovr/screenshots/sort-order-button.svg)
+- pressing `,` to open the menu
 
 ## sort criteria
 
@@ -22,7 +20,7 @@ rovr supports the following sort options:
 
 ### sort by name
 
-{/* <add image> */}
+![sort by name](/rovr/screenshots/sortby-name.svg)
 
 Sorts files alphabetically by their name. This is the default sorting method.
 
@@ -31,7 +29,7 @@ Sorts files alphabetically by their name. This is the default sorting method.
 
 ### sort by extension
 
-{/* <add image> */}
+![sort by extension](/rovr/screenshots/sortby-extension.svg)
 
 Groups files by their file extension, making it easy to find files of the same type together.
 
@@ -40,7 +38,7 @@ Groups files by their file extension, making it easy to find files of the same t
 
 ### sort by natural order
 
-{/* <add image> */}
+![sort by natural](/rovr/screenshots/sortby-natural.svg)
 
 Uses natural sorting, which handles numbers in file names more intuitively (e.g., "file2" comes before "file10").
 
@@ -49,7 +47,7 @@ Uses natural sorting, which handles numbers in file names more intuitively (e.g.
 
 ### sort by size
 
-{/* <add image> */}
+![sort by size](/rovr/screenshots/sortby-size.svg)
 
 Sorts files by their size, useful for finding large or small files quickly.
 
@@ -58,7 +56,7 @@ Sorts files by their size, useful for finding large or small files quickly.
 
 ### sort by created time
 
-{/* <add image> */}
+![sort by creation](/rovr/screenshots/sortby-creation.svg)
 
 Sorts files by their creation time.
 
@@ -67,7 +65,7 @@ Sorts files by their creation time.
 
 ### sort by modified time
 
-{/* <add image> */}
+![sort by modified](/rovr/screenshots/sortby-modified.svg)
 
 Sorts files by their last modification time.
 
@@ -76,30 +74,14 @@ Sorts files by their last modification time.
 
 ## toggling sort direction
 
-{/* <add image> */}
-
 You can toggle between ascending and descending order:
 - **keybinding**: `d` (when sort menu is open)
 - this switches the current sort order between ascending and descending
 
 The sort menu dynamically updates to show the current direction for each sort option.
 
-## sort order switcher
-
-{/* <add image> */}
-
-The sort order switcher provides a quick way to cycle through different sort orders without opening the sort menu:
-
-- **location**: displayed in the action button area
-- **functionality**: click to cycle through available sort orders
-- **visual feedback**: shows the current sort type and direction with appropriate icons
-
 ## persistence
 
-{/* <add image> */}
-
-Your sort preferences are automatically saved and persist between sessions using the **state manager**. When you close and reopen rovr, it will remember:
+Your sort preferences are automatically saved and persist between sessions. When you close and reopen rovr, it will remember:
 - your selected sort criteria (name, size, extension, etc.)
 - your sort direction (ascending or descending)
-
-These preferences apply to all tabs and are managed by the state manager, which stores application state in the `state.toml` file in your rovr configuration directory.
